--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,4 +13,10 @@ LazyData: true
 RoxygenNote: 7.0.2
 Suggests: 
     testthat (>= 2.1.0),
-    covr
+    covr,
+    knitr,
+    rmarkdown
+Imports: class,
+  magrittr,
+  randomForest
+VignetteBuilder: knitr
