--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: STAT302package
-Title: What the Package Does (One Line, Title Case)
+Title: A developed package in R dex
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Siyue",
