--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: STAT302package
-Title: A developed package in R dex
+Title: A developed package in R
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Siyue",
@@ -11,6 +11,7 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
+Depends: R (>= 3.2)
 Suggests: 
     testthat (>= 2.1.0),
     covr,
@@ -20,5 +21,6 @@ Suggests:
 Imports: 
   class,
   magrittr,
-  randomForest
+  randomForest,
+  stats
 VignetteBuilder: knitr
