--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,10 @@
 
 export(f_to_c)
 export(my_knn_cv)
+export(my_lm)
 export(my_pow)
 export(my_rf_cv)
+export(my_t_test)
 import(class)
 import(randomForest)
 import(stats)
